resolved overflow-y issue throughout site

--- a/public/css/_common.scss
+++ b/public/css/_common.scss
@@ -2,7 +2,7 @@
 html,body {
   margin: 0;
   padding: 0;
-  overflow-x:hidden;
+  overflow:hidden;
   font-family:"Lato";
   background: #222;
 }
@@ -223,7 +223,7 @@ font-size: 1.2em;
   width: 100%;
   z-index:11;
   height: auto;
-  overflow-y:scroll;
+  // overflow-y:scroll;
   overflow-x:hidden;
   background: #eaeaea;
     -webkit-transition: all 0.5s;
