--- a/public/css/main.css
+++ b/public/css/main.css
@@ -527,7 +527,7 @@ span.cd-date {
 html, body {
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
+  overflow: hidden;
   font-family: "Lato";
   background: #222; }
 
@@ -718,7 +718,6 @@ html, body {
   width: 100%;
   z-index: 11;
   height: auto;
-  overflow-y: scroll;
   overflow-x: hidden;
   background: #eaeaea;
   -webkit-transition: all 0.5s;
